[gd_scene load_steps=7 format=3 uid="uid://jdmgtj2chb6c"]

[ext_resource type="Script" uid="uid://cw8un7n7ut4dy" path="res://Scripts/ui/hud.gd" id="1_brl7u"]
[ext_resource type="Texture2D" uid="uid://bvdu0aee3o1f6" path="res://assets/traincards/card_back.png" id="2_1c3be"]
[ext_resource type="Texture2D" uid="uid://cdd3knlk257un" path="res://assets/destinations/card_back.png" id="3_1oi58"]
[ext_resource type="PackedScene" uid="uid://dwwp3da2l2vb3" path="res://Scenes/ui/DestinationTicketChooser.tscn" id="4_1c3be"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqghy"]
size = Vector2(69.75, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brl7u"]
size = Vector2(292, 182)

[node name="Hud" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="." groups=["hud_group"]]
script = ExtResource("1_brl7u")

[node name="PlayerInfo" type="VBoxContainer" parent="HUD"]
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerNameLabel" type="Label" parent="HUD/PlayerInfo"]
layout_mode = 2
text = "Player Name: [None]"

[node name="ScoreLabel" type="Label" parent="HUD/PlayerInfo"]
layout_mode = 2
text = "Score: 0"

[node name="TrainsLabel" type="Label" parent="HUD/PlayerInfo"]
layout_mode = 2
text = "Trains: 45"

[node name="TrainDeckPile" type="TextureRect" parent="HUD"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_1c3be")
expand_mode = 1

[node name="ClickArea" type="Area2D" parent="HUD/TrainDeckPile"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/TrainDeckPile/ClickArea"]
position = Vector2(40.125, 60)
shape = SubResource("RectangleShape2D_uqghy")

[node name="FaceUpCardsContainer" type="HBoxContainer" parent="HUD"]
custom_minimum_size = Vector2(440, 130)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="DestinationDeckPile" type="TextureRect" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -341.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 232.0
grow_horizontal = 0
texture = ExtResource("3_1oi58")
expand_mode = 1

[node name="ClickArea" type="Area2D" parent="HUD/DestinationDeckPile"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/DestinationDeckPile/ClickArea"]
position = Vector2(161, 105)
shape = SubResource("RectangleShape2D_brl7u")

[node name="PlayerHandContainer" type="HBoxContainer" parent="HUD"]
custom_minimum_size = Vector2(0, 130)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="DestinationTicketChooser" parent="HUD" instance=ExtResource("4_1c3be")]
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="HUD/TrainDeckPile/ClickArea" to="HUD" method="_on_train_deck_area_input_event"]
[connection signal="input_event" from="HUD/DestinationDeckPile/ClickArea" to="HUD" method="_on_destination_deck_area_input_event"]
